tests/baselines/reference/getJavaScriptSyntacticDiagnostics2.baseline
//// [/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics2.ts] ////

// === Syntax Diagnostics ===
Syntactic Diagnostics:
/tests/cases/fourslash/a.js(1,1): error TS8003: 'export =' can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    export = b;
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.